# graph_ml

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  build.py  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation.md  ---everything-else.md  ---feature-request.md
.github/workflows/: codspeed.yml  release.yml  tests.yml
datasets/: dataset.py  polbooks.py
examples/: Untitled.ipynb  sbm_sampler.ipynb
graph_ml/: __init__.py  math.py  trie.py
graph_ml/_ext/: Trie.cpp  Trie.h  Trie.pxd  cytrie.pyx
graph_ml/datasets/: dataset.py  polbooks.py
graph_ml/models/: __init__.py  gensim_node2vec.py  node2vec.py  torch_node2vec.py
graph_ml/trainers/: trainer.py
graph_ml/transformations/: sampler.py  samplers.py
graph_ml/utils/: __init__.py  config.py  gpu_utils.py  logger.py  torch_utils.py  utils.py
tests/: setup_test.py  test_config.py  test_cython.py  test_datasets.py  test_gpu_available.py  test_logger.py  test_samplers.py
