[tool.poetry]
name = "graph_ml"
version = "0.1"
description = ""
authors = ["Ashutosh Tiwari <findashutoshtiwari@gmail.com>"]
readme = "README.md"
packages = [{include = "graph_ml"}]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "~3.10.12"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
joblib = "^1.3.2"
psutil = "^5.9.5"
urllib3 = "1.26.11"
ipywidgets = "^8.1.1"
pickleshare = "^0.7.5"
torch = "^2.1.2"
torchaudio = "^2.1.2"
torchvision = "^0.16.2"
traittypes = "^0.2.1"
traitlets = "^5.9.0"
datasets = "^2.17.1"
torch-cluster = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcu121/torch_cluster-1.6.2%2Bpt21cu121-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
pyg-lib = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcu121/pyg_lib-0.4.0%2Bpt21cu121-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
torch-scatter = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcu121/torch_scatter-2.1.2%2Bpt21cu121-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
torch-sparse = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcu121/torch_sparse-0.6.18%2Bpt21cu121-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
torch-spline-conv = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcu121/torch_spline_conv-1.2.2%2Bpt21cu121-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
torch-geometric = "^2.5.0"
gensim = "^4.3.2"
numba = "^0.59.0"
cython = "^3.0.10"

# [[tool.poetry.source]]
# name = "torch-wheels"
# url = "https://data.pyg.org/whl/torch-2.1.2+cu121.html"
# priority = "primary"

[tool.poetry.build]
generate-setup-file = false
script = 'build.py'

[build-system]
requires = ["poetry_core", "Cython"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.poetry.group.debug.dependencies]
nvitop = "^1.3.1"
ipython = "*"
kaggle = "^1.6.6"
wandb = "^0.15.12"
seaborn = "^0.13.0"
notebook = "6.4.12"
codeium-jupyter = "^1.1.21"
jupyter-contrib-nbextensions = "^0.7.0"
traittypes = "^0.2.1"
traitlets = "5.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pandas = "^2.1.1"
pyarrow = "15.0.0"
pytorch-lightning = "^2.1.3"

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"



# poetry add git+ssh://git@github.com/thunderock/graph_ml.git
# poetry add whl_url
